[YPUB-6489] edycja tasków: jar, test; dodanie tastGWTUnit, testJUnit, dist, edycja publishing - publikacja do ivy'ego \\dev\files\ivyrep\public\eu.ydp\ydpgwtutils_gradle