@@ -50,6 +50,8 @@ dependencies {
     compile group: 'org.easytesting', name: 'fest-assert-core', version: '2.0M10'
     compile group: 'com.google.gwt.gwtmockito', name: 'gwtmockito', version: '1.1.3'
     compile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.0.1'
+	
+    testCompile group: 'org.reflections', name: 'reflections', version: '0.9.9-RC1'
 }
 
 sonarRunner {
@@ -94,4 +96,75 @@ jacoco {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.12'
+}
+
+task testJUnit(type: Test) {
+    jacoco {
+        enabled = true
+    }
+    useJUnit()
+	
+    include "**/JUnitTestSuite.*"
+
+    forkEvery = 1
+    maxHeapSize = '512M'
+    jvmArgs(['-XX:MaxPermSize=256M', '-Xss1M'])
+}
+task testGWTUnit(type: Test) {
+    jacoco {
+        enabled = false
+    }
+    include "**/GWTTestCaseSuite.*"
+    include "**/MainFlowProcessorTest.*"
+
+    forkEvery = 1
+    maxHeapSize = '512M'
+    jvmArgs(['-XX:MaxPermSize=256M', '-Xss1M'])
+}
+
+task test(overwrite: true, dependsOn: [testJUnit, testGWTUnit]) {
+    ext {
+        // this is needed for sonarRunner
+        reports = [junitXml: [destination: file("${buildDir}/test-results")]]
+        jacoco = [destinationFile: file(jacocoReport)]
+    }
+}
+
+
+jar {
+	baseName 'ydpgwtutils'
+	from sourceSets.main.java.srcDirs
+}
+
+task dist(dependsOn: ['test', 'jar']){
+}
+
+publishing {
+    publications {
+        ivy(IvyPublication) {
+            organisation 'eu.ydp'
+            module 'ydpgwtutils_gradle'
+            revision "${project.ext.version}-${buildnumber}"
+            descriptor.status = project.ext.status
+            
+            artifacts {
+                artifact("${buildDir}/libs/ydpgwtutils.jar") {
+                    name 'ydpgwtutils'
+                    classifier 'source'
+                    extension 'jar'
+                    conf 'default'
+                    builtBy dist
+                }
+            }
+        }
+    }
+    repositories {
+        ivy {
+            url 'http://dev/ivyrep/public'
+            layout 'pattern', {
+                artifact '[organisation]/[module]/[revision]/[type]s/[artifact].[ext]'
+                ivy '[organisation]/[module]/[revision]/[type]s/[artifact].[ext]'
+            }
+        }
+    }
 }
